Create workflow from start to end

--- a/temporal-server/.env
+++ b/temporal-server/.env
@@ -1,3 +1,9 @@
+TEMPORAL_HOST=temporal
+TEMPORAL_PORT=7233
+
+TIKA_HOST=apache-tika
+TIKA_PORT=9998
+
 COMPOSE_PROJECT_NAME=temporal
 CASSANDRA_VERSION=3.11.9
 ELASTICSEARCH_VERSION=7.16.2
